Fix category balls on mobile

--- a/css/style_small.scss
+++ b/css/style_small.scss
@@ -9,6 +9,8 @@
 
     p {
         line-height: 100px;
+        width: 100px;
+        height: 100px;
     }
 }
 #hdris-landing-page .category-segment {
